--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "simple tool to help with shuffling the aeons end player cards",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
