--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple tool to help with shuffling the aeons end player cards",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +15,8 @@
     "mongoose": "^4.9.2",
     "pug": "^2.0.0-beta11",
     "socket.io": "^1.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
